Correction des end points et des ResponseDto :